# posture-monitor

./: .gitignore  README.md  ROLES_WORK_SUMMARY.md
cpp-app/: CMakeLists.txt  README.md
cpp-app/include/: application.h
cpp-app/include/camera/: camera_manager.h  frame_processor.h
cpp-app/include/ml/: model_loader.h  posture_analyzer.h
cpp-app/include/notification/: notification_manager.h
cpp-app/include/settings/: settings_manager.h
cpp-app/qml/: main.qml  resources.qrc
cpp-app/src/: application.cpp  main.cpp
cpp-app/src/camera/: camera_manager.cpp  frame_processor.cpp
cpp-app/src/ml/: model_loader.cpp  posture_analyzer.cpp
cpp-app/src/notification/: notification_manager.cpp
cpp-app/src/settings/: settings_manager.cpp
mediapipe/: obsluga.py
ui-app/: CustomButton.qml  main.qml  main_advanced.py  main_advanced_stats.qml  posture_detector.py  pyproject.toml  requirements.txt  statistics_manager.py
ui-app/.qtcreator/Python_3_11_64_bit_venv/: pyvenv.cfg
ui-app/.qtcreator/Python_3_11_64_bit_venv/Scripts/: activate  activate.bat
